--- a/assets/css/map-style.css
+++ b/assets/css/map-style.css
@@ -2,7 +2,7 @@
 	Theme Name: Ulei Viu
 */
 
-@import url(href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap);
 /* Обнуление */
 *{
 	padding: 0;
@@ -232,6 +232,7 @@ html,body{
 }
 
 .fullscreen__title__button{
+	display: inline-block;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	padding: 15px  20px 10px;
@@ -608,11 +609,11 @@ overflow: hidden;
 .facebook img:hover, .telegram img:hover, .instagram img:hover {
 	transition: 0.8s;
 	transform: scale(1.3); 
-}
+}/*
 .contacts__form{
 	max-width: 50%;
 	margin: 0 0 2em  0 ;
-	/* padding:43px 0 0 0; */
+
 
 
 }
@@ -621,8 +622,7 @@ overflow: hidden;
 }
 p label {
 	display: inline-block;
-	/* color: red; */
-	/* margin: px 0; */
+
 }
 .contacts__form form, .feed__form form{
 	min-width: 100%;
@@ -648,8 +648,7 @@ p label {
 	padding: 5px;
 	
 }
-/* .input__phone {
-} */
+
 .textarea__subject {
 	height: 200px;
 }
@@ -678,7 +677,7 @@ p label {
 	width: 220px;
 	letter-spacing: 5px;
 	
-}
+}*/
 .footer{
 	background-color:#1B3307;
 	padding: 20px 0;
@@ -919,10 +918,7 @@ p label {
 .widget_tag_cloud h2{
 	display: none;
 }
-.tagcloud a{
-	font-size: ;
-	
-}
+
 .article__label-single:hover, .article_label a:hover , .tagcloud a:hover{
 	transition: 0.8s;
 	color:#fff;
@@ -960,7 +956,6 @@ p label {
 .widget ul li a{
 	display: block;
 	transition: 0.5s;
-	/* margin: 1em 0 0 0 ; */
 	border-top: 1px solid #000;
 	padding: 1em;
 	font-size: 1.3em;
@@ -1140,12 +1135,12 @@ border-radius: 3px;
 		display: block;
 		width: 100%;
 	}
-	.contacts__form{
+	/* .contacts__form{
 		padding: 5% ;
 		max-width: 100%;
 		margin: 0 ;
 		
-	}
+	} */
 	
 	.contacts__tel{
 		
@@ -1379,14 +1374,14 @@ border-radius: 3px;
 		max-width: 100%;
 		margin: 0;
 	}
-	.contacts__form{
+	/* .contacts__form{
 		max-width: 100%;
 		margin: 0;
 		
 	}
 	.contacts__form textarea, .contacts__form input, .contacts__tel{
 		max-width: 100%;
-	}
+	} */
 	.header_blog_text {
 		max-width: 100%;
 		padding: 1%;
